# rsynx

./: .gitignore  Cargo.toml  README.md  run_tests.sh
.github/workflows/: test.yml
bats-tests/: README.md  cli_options.bats  edge_cases.bats  local_sync.bats  network_sync.bats
bats-tests/helpers/: test_helpers.bash
src/: lib.rs  local_sync.rs  main.rs  network_sync.rs  sync.rs
tests/: compression_tests.rs  network_sync_tests.rs  sync_tests.rs
