[package]
name = "rsynx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
sha2 = "0.10"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11.6"
memmap2 = "0.9.5"
filetime = "0.2"
rand = "0.9.0"
hex = "0.4.3"
indicatif = "0.17"
flate2 = "1.0"